fix-disabled horizontal scrolling

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,7 @@
 body{
   margin: 0;
   font-family: 'Lora', serif;
+  overflow-x: hidden;
 }
 .navbar{
     color: white;
